pesquisa funcionando errei no ==

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
+	<link rel="shortcut icon" href="/images/cadastro.png" type="image/x-icon">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/ajax.js"></script>
     <script src="/javascripts/validacao.js"></script>
