--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,3 +48,16 @@ input[type=submit] {
   background-color: rgb(42, 116, 177);
   color: white;
 }
+.customers a {
+
+  border: 1px;
+  border-radius: 4px;
+  background-color: #0a8f5e;
+  color: #f2f2f2;
+  padding: 8px;
+  float:right;
+  text-decoration: none;
+  
+  
+}
+
