--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,3 +61,62 @@ input[type=submit] {
   
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #0a8f5e;
+}
+
+main{
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90%;
+  margin: 5vh auto;
+  padding: 50px;
+  box-shadow: 2px 2px 10px var(--shadow-color);
+  gap: 20px;
+  background-color: aliceblue;
+}
+
+
+@media (max-width:480px){
+  header{
+      position:fixed;
+      width:100%;
+  }
+  .header-title{
+      font-size: 1.5rem;
+      
+  }
+
+  main{
+      padding: 0;
+      margin: 20px 0 0 0;
+      width:100%;
+      box-shadow: none;
+  }
+}
