--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,42 +4,28 @@
     <title><%= title %></title>
 	<link rel="shortcut icon" href="/images/cadastro.png" type="image/x-icon">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+	<link rel='stylesheet' href='/stylesheets/modal.css' />
+	<link rel='stylesheet' href='/stylesheets/records.css' />
+	<link rel='stylesheet' href='/stylesheets/main.css' />
+	<script src="/javascripts/main.js" defer></script>
     <script src="/javascripts/ajax.js"></script>
     <script src="/javascripts/validacao.js"></script>
   </head>
   <body>
+
+	<!-- BARRA DE NAVEGAÇÃO-->
+
+	<ul>
+		<li><a class="active" href="/">Home</a></li>
+		<li><a href="#news" id="cadastrarCliente">Cadastrar</a></li>
+		<li><a href="#contact">Listar</a></li>
+	  </ul>
+
+
     <h1>Cadastro</h1>
 	
 
-		<fieldset id="formCadastro">
-			<legend>Cadastro de pessoas</legend>
-			<form action="/cadastrar-pessoas" method="post" onsubmit="return validacao()">
-				<div>
-					<label for="nome">Nome: </label>
-					<input type="text" name="nome" id="nome" /> 
-				</div>
-				<div>
-					<label for="sobrenome">Sobrenome:  </label>
-					<input type="text" name="sobrenome" id="sobrenome" /> 
-				</div>
-				<div>
-					<label for="cpf">CPF:  </label>
-					<input type="text" name="cpf" id="cpf" /> 
-				</div>
-				<div>
-					<label for="telefone">Telefone:  </label>
-					<input type="text" name="telefone" id="telefone" /> 
-				</div>
-				<div>
-					<label for="endereco">Endereço:  </label>
-					<input type="text" name="endereco" id="endereco" /> 
-				</div>
-				<hr>
-				<div>
-					<input type="submit" value="Cadastrar" /> 
-				</div>
-			</form>
-		</fieldset>
+		
 
     <fieldset id="formCadastro">
 			<legend>Cadastro de pessoas</legend>
@@ -74,11 +60,56 @@
 						<td><%= pessoas[i].cpf %></td>
 						<td><%= pessoas[i].telefone %></td>
 						<td><%= pessoas[i].endereco %></td>
-						<td><a href="" >Alterar</a></td>
+						<td><a href="/alterar?cpf=">Alterar</a></td>
 						<td><a href="#" onclick="excluirDados('<%= pessoas[i].cpf %>')" style="background-color:brown">Excluir</a></td>
 					</tr>	
 				<% } %>
 			</table>
 		</fieldset>
+
+		 <!-- MODAL CADASTRO CLIENTE-->
+		 <div class="modal" id="modal">
+            <div class="modal-content">
+                <header class="modal-header">
+                    <h2>Cadastro</h2>
+                    <span class="modal-close" id="modalClose">&#10006;</span>
+                </header>
+
+                <fieldset id="formCadastro">
+					<legend>Cadastro de pessoas</legend>
+					<form action="/cadastrar-pessoas" method="post" onsubmit="return validacao()">
+						<div>
+							<label for="nome">Nome: </label>
+							<input type="text" name="nome" id="nome" /> 
+						</div>
+						<div>
+							<label for="sobrenome">Sobrenome:  </label>
+							<input type="text" name="sobrenome" id="sobrenome" /> 
+						</div>
+						<div>
+							<label for="cpf">CPF:  </label>
+							<input type="text" name="cpf" id="cpf" /> 
+						</div>
+						<div>
+							<label for="telefone">Telefone:  </label>
+							<input type="text" name="telefone" id="telefone" /> 
+						</div>
+						<div>
+							<label for="endereco">Endereço:  </label>
+							<input type="text" name="endereco" id="endereco" /> 
+						</div>
+						<hr>
+						<div>
+							<input type="submit" value="Cadastrar" /> 
+						</div>
+					</form>
+				</fieldset>
+
+                <footer class="modal-footer">
+                    <button id="salvar"class="button green">Salvar</button>
+                    <button id="cancelar" class="button blue">Cancelar</button>
+                </footer>
+            </div>
+        </div>
   </body>
 </html>
