--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
 					<div class="form-group">
 						<label for="nome">Nome: </label>
 						<input type="text" name="nome" id="nome" /> 
-						<input type="submit" value="Pesquisar" /> 
+						<input class="btn btn-success" type="submit" value="Pesquisar" /> 
 					</div>
 				</form>
 		</div>
