--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,11 @@
 	<link rel="shortcut icon" href="/images/cadastro.png" type="image/x-icon">
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
-	<script src="/javascripts/main.js" defer></script>
-    <script src="/javascripts/ajax.js"></script>
+    <script src="/javascripts/ajax.js" defer></script>
     <script src="/javascripts/validacao.js"></script>
 
 	<!-- BOOTSTRAP -->
-
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -20,53 +17,40 @@
   </head>
   <body>
 
-	<!-- BARRA DE NAVEGAÇÃO-->
 
+	<div class="menuBotoes">
+		<a class="btn btn-outline-dark" href="/">Home</a>
+		<a class="btn btn-outline-dark" href="#" id="cadastrarCliente" data-toggle="modal" data-target="#modalCadastro">Cadastro</a>
+		<a class="btn btn-outline-dark" style="float: right; margin-right: 0%;" href="#" id="ListaPessoas" data-toggle="collapse" data-target="#modalListaPessoas"><img src="/images/search.png" ></a>
+		
+	</div>
 	
 
-	<ul>
-		<li><a class="active" href="/">Home</a></li>
-		<li><a href="#news" id="cadastrarCliente" data-toggle="modal" data-target="#exampleModal">Cadastrar</a></li>
-		<li><a  data-toggle="collapse" href="#collapseExample">Listar  </a></li>
-	</ul>
 
 	
-
-	  <div class="collapse" id="collapseExample">
-		<div class="card card-body">
+	  <!-- FORMULARIO DE PESQUISA-->
+		<div class="collapse" id="modalListaPessoas">
 			<div  id="formpPesquisa" class="formPesquisa">
 				<form action="/pesquisar" method="get"id="formpPesquisa" style="margin: 0;">
-					<div class="form-group">
-						<label for="nome">Nome: </label>
-						<input type="text" name="nome" id="nome" /> 
-						<input class="btn btn-success" type="submit" value="Pesquisar" /> 
+					<div>
+						<input type="text" name="nome" placeholder="Digite um nome para realizar a pesquisa: "/> 
+						<input class="btn btn-dark" type="submit" value="Pesquisar" /> 
 					</div>
 				</form>
+			</div>
 		</div>
-		</div>
-	  </div>
-
-	
-
-	<!-- FORMULARIO DE PESQUISA-->
-
-
-    
-
 	<!-- LISTA DE PESSOAS-->
-
-
 		<div class="listaPessoas">
 			<table border="1"  class="table" >
 				<thead class="thead-dark">
 					<tr>
-						<th>Nome</th>
-						<th>Sobrenome</th>
-						<th>CPF</th>
-						<th>Telefone</th>
-						<th>Endereço</th>
-						<th>Action</th>
-						<th>Deleted</th>
+						<th  style="text-align: center;">Nome</th>
+						<th  style="text-align: center;">Sobrenome</th>
+						<th  style="text-align: center;">CPF</th>
+						<th  style="text-align: center;">Telefone</th>
+						<th  style="text-align: center;">Endereço</th>
+						<th  style="text-align: center;">Action</th>
+						<th  style="text-align: center;">Deleted</th>
 					</tr>
 				</thead>
 				
@@ -77,70 +61,30 @@
 						<td><%= pessoas[i].cpf %></td>
 						<td><%= pessoas[i].telefone %></td>
 						<td><%= pessoas[i].endereco %></td>
-						<td><a href="/alterar?cpf="  class="btn btn-primary">Alterar</a></td>
-						<td><a href="#" onclick="excluirDados('<%= pessoas[i].cpf %>')" class="btn btn-danger">Excluir</a></td>
+						<td style="text-align: center;"><a  href="/alterar?cpf="  class="btn btn-primary">Alterar</a></td>
+						<td style="text-align: center;"><a href="#" onclick="excluirDados('<%= pessoas[i].cpf %>')" class="btn btn-danger">Excluir</a></td>
 					</tr>	
 				<% } %>
 			</table>
 		</div>
 
-		<!-- FORMULARIO DE CADASTRO-->
 
-	
+		<!-- MODALS -->
 
-		 <!-- MODAL DO FORM DE CADASTRO-->
-		 <div class="modal" id="modal">
-            <div class="modal-content">
-                <header class="modal-header">
-                    <h2>Cadastro</h2>
-                    <span class="modal-close" id="modalClose">&#10006;</span>
-                </header>
 
-                <div id="formCadastro" class="formCadastro">
-					<form class="form-group" action="/cadastrar-pessoas" method="post" onsubmit="validacao()">
-						<div>
-							<label for="nome">Nome: </label>
-							<input type="text" name="nome" id="nome" /> 
-						</div>
-						<div>
-							<label for="sobrenome">Sobrenome:  </label>
-							<input type="text" name="sobrenome" id="sobrenome" /> 
-						</div>
-						<div>
-							<label for="cpf">CPF:  </label>
-							<input type="text" name="cpf" id="cpf" /> 
-						</div>
-						<div>
-							<label for="telefone">Telefone:  </label>
-							<input type="text" name="telefone" id="telefone" /> 
-						</div>
-						<div>
-							<label for="endereco">Endereço:  </label>
-							<input type="text" name="endereco" id="endereco" /> 
-						</div>
-						<div>
-							<input type="submit" value="Cadastrar" /> 
-						</div>
-					</form>
-				</div>
-
-            </div>
-        </div>
-
-		<!--  TESTE MODAL BOOTSTRAP-->
-		<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<!-- MODAL FORMULARIO CADASTRO-->
+<div class="modal fade" id="modalCadastro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 	  <div class="modal-content">
-		<div class="modal-header">
-		  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-		  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		<div  style=" background-color: #343a40; border-top-left-radius: 0%; border-top-right-radius:0% 0%;" class="modal-header">
+		  <h5  style="color:#ddd;" class="modal-title" id="exampleModalLabel">Formulario de Cadastro</h5>
+		  <button style="color:#ddd;" type="button" class="close" data-dismiss="modal" aria-label="Close">
 			<span aria-hidden="true">&times;</span>
 		  </button>
 		</div>
 		<div class="modal-body">
 			<div id="formCadastro" class="formCadastro">
-				<form action="/cadastrar-pessoas" method="post" onsubmit="validacao()">
+				<form action="/cadastrar-pessoas" method="post" onsubmit="return validacao()">
 					<div>
 						<label for="nome">Nome: </label>
 						<input type="text" name="nome" id="nome" /> 
@@ -162,7 +106,7 @@
 						<input type="text" name="endereco" id="endereco" /> 
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 						<button type="submit" class="btn btn-primary">Save changes</button>
 					  </div>
 				</form>
@@ -172,6 +116,5 @@
 	  </div>
 	</div>
   </div>
-
   </body>
 </html>
