--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,10 +21,11 @@
 	<div class="menuBotoes">
 		<a class="btn btn-outline-dark" href="/">Home</a>
 		<a class="btn btn-outline-dark" href="#" data-toggle="modal" data-target="#modalCadastro">Cadastro</a>
+		<a class="btn btn-outline-dark" href="#" data-toggle="modal" data-target="#modalAlterar">Alterar</a>
 		<a class="btn btn-outline-dark" style="float: right; margin-right: 0%;" href="#" id="ListaPessoas" data-toggle="collapse" data-target="#modalListaPessoas"><img src="/images/search.png" ></a>
 		
 	</div>
-	
+	<hr>
 
 
 	
@@ -54,15 +55,15 @@
 					</tr>
 				</thead>
 				
-				<% for(i=0; i<pessoas.length; i++) { %>
+				<% for(i=0; i<pessoasCadastradas.length; i++) { %>
 					<tr >
-						<td><%= pessoas[i].nome %></td>
-						<td><%= pessoas[i].sobrenome %></td>
-						<td><%= pessoas[i].cpf %></td>
-						<td><%= pessoas[i].telefone %></td>
-						<td><%= pessoas[i].endereco %></td>
-						<td style="text-align: center;"><a  href="/alterar?cpf=<%= pessoas[i].cpf %>"  class="btn btn-primary">Alterar</a></td>
-						<td style="text-align: center;"><a href="#" onclick="excluirDados('<%= pessoas[i].cpf %>')" class="btn btn-danger">Excluir</a></td>
+						<td><%= pessoasCadastradas[i].nome %></td>
+						<td><%= pessoasCadastradas[i].sobrenome %></td>
+						<td><%= pessoasCadastradas[i].cpf %></td>
+						<td><%= pessoasCadastradas[i].telefone %></td>
+						<td><%= pessoasCadastradas[i].endereco %></td>
+						<td style="text-align: center;"><a  href="/alterar?cpf=<%= pessoasCadastradas[i].cpf %>"  class="btn btn-primary" >Alterar</a></td>
+						<td style="text-align: center;"><a href="#" onclick="excluirDados('<%= pessoasCadastradas[i].cpf %>')" class="btn btn-danger">Excluir</a></td>
 					</tr>	
 				<% } %>
 			</table>
@@ -117,37 +118,7 @@
 	</div>
   </div>
 
-  <div id="formCadastro" class="formCadastro">
-	<form action="/alterar-pessoa" method="post" onsubmit="return validacao()">
-		<div>
-			<label for="nome">Nome: </label>
-			<input type="text" name="nome" value="<%= usuario.nome %>" id="nome" /> 
-		</div>
-		<div>
-			<label for="sobrenome">Sobrenome:  </label>
-			<input type="text" name="sobrenome"value="<%= usuario.sobrenome %>" id="sobrenome" /> 
-		</div>
-		<div>
-			<label for="cpf">CPF:  </label>
-			<input type="text" name="cpf" value="<%= usuario.cpf %>" id="cpf" /> 
-		</div>
-		<div>
-			<label for="telefone">Telefone:  </label>
-			<input type="text" name="telefone" value="<%= usuario.telefone %>" id="telefone" /> 
-		</div>
-		<div>
-			<label for="endereco">Endereço:  </label>
-			<input type="text" name="endereco" value="<%= usuario.endereco %>" id="endereco" /> 
-		</div>
-		<div class="modal-footer">
-			<button type="button"   class="btn btn-danger" data-dismiss="modal"><a style="text-decoration:none; color: aliceblue;" href="/">Close</a></button>
-			<button type="submit" class="btn btn-primary">Alterar</button>
-		  </div>
-	</form>
-</div>
-
- 
-
+  
 
   </body>
 </html>
