--- a/app/views/alterar.ejs
+++ b/app/views/alterar.ejs
@@ -26,7 +26,7 @@
                         <input type="text" name="sobrenome"value="<%= pessoa.sobrenome %>" id="sobrenome" /> 
                     </div>
                     <div>
-                        <label for="cpf">CPF:  </label>np
+                        <label for="cpf">CPF:  </label>
                         <input type="text"  readonly="true" name="cpf" value="<%= pessoa.cpf %>" id="cpf" /> 
                     </div>
                     <div>
