--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -49,8 +49,8 @@
 						<th  style="text-align: center;">CPF</th>
 						<th  style="text-align: center;">Telefone</th>
 						<th  style="text-align: center;">Endereço</th>
-						<th  style="text-align: center;">Action</th>
-						<th  style="text-align: center;">Deleted</th>
+						<th  style="text-align: center;">Alterar</th>
+						<th  style="text-align: center;">Remover</th>
 					</tr>
 				</thead>
 				
@@ -61,9 +61,11 @@
 						<td><%= pessoasCadastradas[i].cpf %></td>
 						<td><%= pessoasCadastradas[i].telefone %></td>
 						<td><%= pessoasCadastradas[i].endereco %></td>
-						<td style="text-align: center;"><a  href="/alterar?cpf=<%= pessoasCadastradas[i].cpf %>"  class="btn btn-primary" >Alterar</a></td>
+						<td style="text-align: center;"><a  href="/alterar?cpf=<%= pessoasCadastradas[i].cpf %>"  class="btn btn-primary">Alterar</a></td>
 						<td style="text-align: center;"><a href="#" onclick="excluirDados('<%= pessoasCadastradas[i].cpf %>')" class="btn btn-danger">Excluir</a></td>
-					</tr>	
+
+					</tr>
+	
 				<% } %>
 			</table>
 		</div>
@@ -115,7 +117,10 @@
 		
 	  </div>
 	</div>
-  </div>
+  
+</div>
+
+
 
   
 
