--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -16,17 +16,17 @@
                     <input type="text" id="cpf" name="cpf" placeholder="CPF" />
                     <input type="text" id="telefone" name="telefone" placeholder="Telefone"/>
                     <input type="text" id="endereco" name="endereco" placeholder="Endereço"/>
-                    <input type="password" placeholder="Password"/>
+                    <input type="password" id="senha" name="senha" placeholder="Password"/>
                     <button type="submit">Cadastrar</button>
                 </form>
             </div>
             <div class="form-container sign-in-container">
-                <form action="#">
+                <form action="/fazerLogin" method="post">
                     <h1>Login</h1>
-                    <input type="email" placeholder="Email" />
-                    <input type="password" placeholder="Password" />
+                    <input type="text" id="endereco" name="endereco" placeholder="Email" />
+                    <input type="password" id="senha" name="senha" placeholder="Password" />
                     <a href="#">Forgot your password?</a>
-                    <button>Entrar</button>
+                    <button type="submit">Entrar</button>
                 </form>
             </div>
             <div class="overlay-container">
